<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/paddingLarge"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_background"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="@dimen/imageWidthAndHeight"
            android:layout_height="@dimen/imageWidthAndHeight"
            android:layout_margin="@dimen/marginNormal"
            android:src="@drawable/daniel"
            app:shapeAppearanceOverlay="@style/ImageRadius" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/marginNormal"
            android:layout_marginBottom="@dimen/marginNormal"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/ImportantTextViewWithLargeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_name" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/UsefulTextViewForJobAndNationality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_job" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/UsefulTextViewForLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_location"
                android:text="@string/person_location" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/ImportantTextViewWithSmallText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_star"
                android:text="@string/person_review" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/marginNormal"
            android:layout_marginEnd="@dimen/marginSmall"
            android:layout_marginBottom="@dimen/marginNormal"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="@dimen/marginSmall"
                android:background="@drawable/text_background"
                android:paddingStart="@dimen/paddingNormal"
                android:paddingTop="@dimen/paddingSmall"
                android:paddingEnd="@dimen/paddingNormal"
                android:paddingBottom="@dimen/paddingSmall"
                android:text="@string/person_work_time"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/smallFontSize" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="@dimen/marginSmall"
                android:text="@string/person_Nationality"
                android:textColor="@color/flat_dark_blue"
                android:textSize="@dimen/smallFontSize" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/last_seen"
                android:textSize="@dimen/smallFontSize" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>